# spellchecker

./: pyproject.toml
app/: lev_engine.py  main.py  webapi.py
